--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/node": "^24.7.0",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-axios": "^2.0.5",
@@ -15,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-spring": "^8.0.27",
+    "typescript": "^5.9.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
